[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-service = { version = "0.3.2", features = ["web-tower"] }
tower = { version = "0.4", features = ["full"] }

hyper = { version = "0.14", features = ["full"] }
http-body = { version = "0.4.5" }

axum = {version="0.5",features=["ws","headers"]}

tonic = { version = "0.5", features = ["tls", "tls-roots", "prost"] }
prost = "0.8"

[build-dependencies]
tonic-build = { version = "0.5", features = ["prost"] }
